Resolve "more uniformity/commonality between .nord and .gord:"